完成将短链接移至回收站、将短链接从回收站中恢复、将回收站中的短链接删除。

--- a/project/src/main/resources/application.yml
+++ b/project/src/main/resources/application.yml
@@ -1,6 +1,14 @@
 server:
   port: 8001
 
+mybatis-plus:
+  global-config:
+    db-config:
+      logic-delete-field: delFlag
+      logic-delete-value: 1
+      logic-not-delete-value: 0
+      id-type: auto
+
 spring:
   mvc:
     view:
